# habit

./: .dockerignore  .env.sample  .env_template  .flake8  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  deploy.yml
config/: celery.py  settings.py  urls.py
dict_project/: celery.py  settings.py  urls.py
docker/web/: Dockerlife
habits/: models.py  serializers.py  tasks.py  urls.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_frequency_alter_habit_time_and_more.py  0002_habit_days_of_week_habit_is_active.py  0003_week_habit_end_time_habit_days_of_week.py  0004_alter_week_day.py  0005_alter_habit_frequency.py
habits/test/: test_models.py  test_views.py
nginx/: Dockerfile
notifications/: periodic.py  views.py
users/: models.py  serializers.py  views.py
users/management/commands/: add_seed_data.py
users/migrations/: 0001_initial.py
